fix time for durationIII

--- a/grafana/prometheus/alerts/scrapers_failures.yml
+++ b/grafana/prometheus/alerts/scrapers_failures.yml
@@ -195,7 +195,7 @@ groups:
 
     - alert: stat_words's errors >1
       expr: 'increase(request_failures{job="vps", service="phrases_positons"}[1m]) < 1000'
-      for: 30min
+      for: 30m
       labels:
         severity: warning
       annotations:
@@ -204,7 +204,7 @@ groups:
 
     - alert: wb_api_service's errors >1
       expr: 'increase(request_failures{job="vps", service="phrases_positons"}[1m]) < 1000'
-      for: 30min
+      for: 30m
       labels:
         severity: warning
       annotations:
