--- a/grafana/prometheus/alerts/scrapers_items.yml
+++ b/grafana/prometheus/alerts/scrapers_items.yml
@@ -205,7 +205,7 @@ groups:
 
     - alert: stat_words's items<557000
       expr: 'last_over_time(items{job="vps", service="stat_words"}[10m]) < 557000'
-      for: 30min
+      for: 30m
       labels:
         severity: warning
       annotations:
@@ -214,7 +214,7 @@ groups:
 
     - alert: wb_api_service's items<20000
       expr: 'last_over_time(items{job="vps", service="wb_api_service"}[10m]) < 20000'
-      for: 30min
+      for: 30m
       labels:
         severity: warning
       annotations:
